--- a/styles.css
+++ b/styles.css
@@ -42,5 +42,51 @@
 }
 
 #start_button {
+    border:none;
+    background-color:transparent;
+    outline:none;
+    visibility: hidden;
+    background-image: url(pink_button.png);
+    background-size: fill;
+    color: white;
+    padding: 20px;
+
+}
+
+#display_button {
     visibility: hidden;
 }
+
+#reroll_button {
+    visibility: hidden;
+}
+
+#buttons {
+    margin-top: 30px;
+}
+
+/* .button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  } */
+
+  body {
+      /* background-color: rgb(219, 232, 255); */
+      /* background-color: rgb(219, 215, 250); */
+      /* background-image: linear-gradient(to bottom right, rgb(219, 232, 255) ,rgb(219, 215, 250)); */
+      /* background-image: linear-gradient(  hsl(247, 83%, 88%), hsl(204, 56%, 61%)); */
+      /* background-repeat:no-repeat;
+        background-size:100% 100%; */
+        /* background-image: linear-gradient(red, yellow); */
+        /* background-attachment: fixed; */
+        background-image: url("wood.jpg");
+        background-size: cover;
+  }
