Remove ability to click cups
Can no longer click cups when you click start game, or when that cup has a rank. Still working on usernames, so might see some usernames every once in a while.

--- a/static/styles.css
+++ b/static/styles.css
@@ -87,3 +87,7 @@ body {
     background-image: url("resources/wood.jpg");
     background-size: contain;
 }
+
+#redUsername, #orangeUsername, #yellowUsername, #greenUsername, #blueUsername, #blackUsername{
+    color: white; 
+}
