Add username support
Added username support. If left empty, will give a randomly generated usernae of form cup color + random animal name

--- a/static/styles.css
+++ b/static/styles.css
@@ -90,4 +90,7 @@ body {
 
 #redUsername, #orangeUsername, #yellowUsername, #greenUsername, #blueUsername, #blackUsername{
     color: white; 
+    text-indent: 2%;
+    text-shadow: 1px black;
+    font-size: Large;
 }
