Doubting displays all dice

--- a/static/styles.css
+++ b/static/styles.css
@@ -123,10 +123,10 @@ body {
 
 }
 
-/* #redUsername {
+#redUsername {
     padding-top: 60px;
 }
 
 #redUsername, #orangeUsername, #yellowUsername, #greenUsername, #blueUsername, #blackUsername {
     position: absolute;
-}  */
+} 
