Adding betting UI

--- a/static/styles.css
+++ b/static/styles.css
@@ -48,6 +48,65 @@
     position: relative;
 }
 
+#buttons {
+    position: fixed;
+    margin-left: 450px;
+}
+
+#count_div {
+    float: left;
+    position: relative;
+    color: white;
+    font-size: 20px;
+}
+
+#face_div {
+    float: right;
+    color: white;
+    font-size: 20px;
+}
+
+#count_up_button, #face_up_button {
+    background-image: url("resources/arrow_up.png");
+    margin-top: 0px;
+}
+
+#count_down_button, #face_down_button {
+    background-image: url("resources/arrow_down.png");
+}
+
+.bet_label {
+    margin-bottom: 10px;
+    
+}
+
+#face_text {
+    padding-left: 15px;
+}
+
+#count_text {
+    padding-left: 10px;
+}
+
+.bet_button {
+    /* visibility: hidden; */
+    border:none;
+    background-color:transparent;
+    outline:none;
+    background-size: 100% 100%;
+    width: 70px;
+    height: 50px;
+    background-repeat: no-repeat;
+    margin-bottom: 0px;
+}
+
+#count_number, #face_number {
+    font-size: 50px;
+    margin: 0px;
+    padding-left: 22px;
+}
+
+
 
 .button {
     visibility: hidden;
@@ -59,10 +118,12 @@
     background-repeat: no-repeat;
     width: 200px;
     height: 50px;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     margin-top: 10px;
     font-size: 17px;
 }
+
+
 
 #roll_button {
     background-image: url(resources/blue_button.png);
@@ -101,6 +162,21 @@
 
 #dudo_button:hover{
     background-image: url(resources/green_pressed.png);
+}
+
+#betting_div{
+    visibility: hidden;
+}
+
+#place_bet_button {
+    visibility: hidden;
+    background-image: url(resources/blue_button.png);
+    margin-top: 15px;
+}
+
+#place_bet_button:hover {
+    background-image: url(resources/blue_pressed.png);
+    /* margin-top: 15px; */
 }
 
 /* ______________________________Other stuff______________________________ */
