--- a/static/styles.css
+++ b/static/styles.css
@@ -132,11 +132,11 @@
     background-image: url(resources/blue_pressed.png);
 }
 
-#start_button {
+#enter_round_button {
     background-image: url(resources/pink_button.png);
 }
 
-#start_button:hover{
+#enter_round_button:hover{
     background-image: url(resources/pink_pressed.png);
 }
 
@@ -194,7 +194,7 @@ body {
 }
 
 #redUsername, #orangeUsername, #yellowUsername, #greenUsername, #blueUsername, #blackUsername{
-    color: white; 
+    color: rgb(255, 255, 255); 
     text-indent: 2%;
     text-shadow: 1px black;
     font-size: 20px;
@@ -220,4 +220,5 @@ body {
 
 #redUsername, #orangeUsername, #yellowUsername, #greenUsername, #blueUsername, #blackUsername {
     position: absolute;
+    margin-top: 10px;
 } 
