Only allow host to start session

--- a/static/styles.css
+++ b/static/styles.css
@@ -306,6 +306,7 @@ body {
 
 #start_session_button {
     margin-top: 100px;
+    visibility: hidden;
 }
 
 /* ________________________________previous bet_______________________________ */
