--- a/static/styles.css
+++ b/static/styles.css
@@ -149,6 +149,7 @@
 
 
 
+
 #roll_button {
     background-image: url(resources/blue_button.png);
 }
@@ -318,6 +319,7 @@ body {
     padding-right: 10px;
     padding-left: 10px;
     height: 107px;
+    visibility: hidden;
 
 }
 
@@ -383,7 +385,7 @@ body {
     padding-right: 10px;
     padding-left: 10px;
     height: 107px;
-
+    visibility: hidden;
 }
 
 #probability_title{
@@ -438,4 +440,4 @@ body {
     padding-right: 35px;
     padding-top: 5px;
 }
-}
+
