--- a/static/styles.css
+++ b/static/styles.css
@@ -322,6 +322,7 @@ body {
     padding-left: 10px;
     height: 107px;
     visibility: hidden;
+    width: 180px;
 
 }
 
@@ -388,6 +389,7 @@ body {
     padding-left: 10px;
     height: 107px;
     visibility: hidden;
+    width: 180px;
 }
 
 #probability_title{
@@ -492,4 +494,10 @@ body {
     margin: 0px;
     padding-bottom: 20px;
     padding-right: 5px;
+}
+
+
+/*______________________________Lost a die_________________________________*/
+#lost_button{
+    visibility: visible;
 }
