not having cases match is ok for session id

--- a/static/styles.css
+++ b/static/styles.css
@@ -492,6 +492,7 @@ body {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 ::placeholder {
