--- a/static/styles.css
+++ b/static/styles.css
@@ -526,7 +526,63 @@ input:focus {
     padding-bottom: 0px;
     padding-right: 5px;
 }
+
+#help_button {
+    visibility: visible;
+    background-image: url(resources/noun_help.png);
+    height: 30px;
+    width: 30px;
+}
+
+#help_button:hover {
+    visibility: visible;
+    background-image: url(resources/noun_help_hover.png);
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
 /*______________________________Lost a die_________________________________*/
 #lost_button{
     visibility: visible;
 }
+
+
